--- a/index.html
+++ b/index.html
@@ -109,7 +109,14 @@
          <section class="w-full h-auto relative  flex flex-col items-center justify-center my-[70px] max-w-[1700px]">
             <!-- chart -->
            <div class="h-auto w-[90%] rounded-[10px] md:rounded-[30px] flex justify-center border-[#68FFA5] border-[3px] md:border-[6px]">
-            <img src="./asset/video/dawae_chart.gif" alt="" class=" h-auto object-contain w-full max-w-[1700px] rounded-[10px] md:rounded-[30px]">
+             <!-- <img src="./asset/video/dawae_chart.gif" alt="" class=" h-auto object-contain w-full max-w-[1700px] rounded-[10px] md:rounded-[30px]">
+            <div class="absolute hidden lg:block left-[11%] top-[8px] bg-[#111923] md:w-[55px] md:h-[28px]"></div> -->
+                <video class="video_service h-auto xl:h-[500px] relative z-[1] w-full object-contain   rounded-[10px] md:rounded-[30px]" 
+                autoplay loop muted playsinline
+                data-aos="fade-right"
+                data-aos-duration="500">
+                <source src="./asset/video/Comp 1_1.mp4" type="video/mp4"> 
+              </video>
            </div>
 
             <!-- <video class="video_service h-auto relative z-[1] w-[90%] max-w-[2000px] h-auto border-[#68FFA5] border-[6px] object-contain rounded-lg" 
