--- a/index.html
+++ b/index.html
@@ -127,16 +127,16 @@
          </section>
 
           <!--about -->
-          <section id="about" class="w-full h-[300px] md:h-[450px] xl:h-[600px] relative  flex flex-col items-center justify-center xl:mt-[70px]">
+          <section id="about" class="w-full h-[300px] min-[500px]:h-[400px] md:h-[450px] xl:h-[600px] relative  flex flex-col items-center justify-center xl:mt-[70px]">
             <!-- bg -->
              <!-- desktop -->
             <img src="./asset/img/bg_about.svg" alt="" class=" h-full object-contain w-[90%] max-w-[1700px] absolute hidden lg:block"> 
             <!-- mobile -->
-            <img src="./asset/img/bg_about_mobile.svg" alt="" class=" h-full object-contain w-[90%] max-w-[1700px] absolute min-[1024px]:hidden"> 
+            <img src="./asset/img/bg_about_mobile.svg" alt="" class=" h-full object-contain w-[90%] min-[500px]:w-[100%] max-w-[1700px] absolute min-[1024px]:hidden"> 
 
             <!-- text -->
-             <p class="relative text-center medium_shadow text-white leading-[1] w-[80%] min-[500px]:w-[400px] md:w-[600px] lg:w-[80%] xl:w-[80%] max-w-[1500px] min-[1500px]:w-[70%] min-[2000px]:w-[1300px] max-[400px]:text-[4vw] text-[18px] min-[500px]:text-[20px] md:text-[30px] min-[900px]:text-[3vw] xl:text-[45px]">
-                <span class=" text-center w-full text-[22px] md:text-[33px] min-[900px]:text-[3.5vw] xl:text-[42px] min-[1400px]:text-[49px]"> $DAWAE - the most supreme meme of all time</span><br><br>
+             <p class="relative text-center medium_shadow text-white leading-[1] w-[80%] min-[500px]:w-[400px] md:w-[550px] lg:w-[80%] xl:w-[80%] max-w-[1500px] min-[1500px]:w-[70%] min-[2000px]:w-[1300px] max-[400px]:text-[4vw] text-[18px] min-[500px]:text-[25px] md:text-[30px] min-[900px]:text-[3vw] xl:text-[45px]">
+                <span class=" text-center w-full text-[22px] min-[500px]:text-[28px] md:text-[33px] min-[900px]:text-[3.5vw] xl:text-[42px] min-[1400px]:text-[49px]"> $DAWAE - the most supreme meme of all time</span><br><br>
                 Listen up 
                my bruddhas! you dont know da wae. Stop throwing your money at ebola tokens that just sink faster than a lead balloon and swipe your cash. This is not da wae, my bruhhas. I will show you da wae. Together, we spit on the jeets and non-believers who refuse to follow da wae. United, we will lead da wae, my bruddhas.</p>
          </section>
