--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                                     </span>
                                 </div>
                                 <div class="w-[80%] lg:pr-[4rem] h-full relative">
-                                    <p class="text-white leading-[1.1] medium_shadow v2 text-[16px] min-[500px]:text-[19px] md:text-[20px] lg:text-[32px]">Connect MetaMask wallet to UniSwap and copy-paste $Zero Layer contract: Here's the magic! Connect that shit to UniSwap, 'cause that's how $DAWAE rolls! Copy and paste like a drunk Ugandan bartender mixin' shots. Bam, $Zero Layer, baby!</p>
+                                    <p class="text-white leading-[1.1] medium_shadow v2 text-[16px] min-[500px]:text-[19px] md:text-[20px] lg:text-[32px]">Connect MetaMask wallet to UniSwap and copy-paste $DAWAE contract: Here's the magic! Connect that shit to UniSwap, 'cause that's how $DAWAE rolls! Copy and paste like a drunk Ugandan bartender mixin' shots. Bam, $DAWAE, baby!</p>
                                 </div>
     
                             </div>
@@ -505,7 +505,7 @@
                                 </span>
                             </div>
                             <div class="w-[75%] lg:pr-[2rem] h-full relative">
-                                <p class="text-white leading-[1.1] medium_shadow v2 text-[16px] min-[500px]:text-[19px] md:text-[20px] lg:text-[32px]">Select amount you want to buy and set slippage to 7-10%. Confirm and swap!: How much $DAWAE do you want? A fucking mountain? A tsunami? Set that slippage like a slippery Ugandan mudslide, 7-10%, and hit Confirm like you mean it! SWAP!</p>
+                                <p class="text-white leading-[1.1] medium_shadow v2 text-[16px] min-[500px]:text-[19px] md:text-[20px] lg:text-[32px]">Select amount you want to buy and set slippage to 0.5-1%. Confirm and swap!: How much $DAWAE do you want? A fucking mountain? A tsunami? Set that slip Confirm like you mean it! SWAP!</p>
                             </div>
 
                         </div>
