--- a/index.html
+++ b/index.html
@@ -499,12 +499,12 @@
                         <div class="w-[370px] min-[500px]:w-[400px] md:w-[440px] h-[260px] md:h-[300px] lg:w-[760px] lg:h-[405px] relative flex justify-center items-center pt-[2rem] lg:pt-[4rem] px-[2rem]">
                             <img src="./asset/img/bg_how04.svg" alt="" class="w-full h-full absolute top-0 z-0 object-contain">
 
-                            <div class="num w-[10%] md:w-[15%] h-full relative flex justify-end mr-[1rem]">
+                            <div class="num w-[10%] md:w-[15%] h-full relative flex justify-end mr-[1rem] max-[1024px]:pt-[2rem]">
                                 <span class="rounded-full Prstartk_font bg-[#6049B8] h-[30px] w-[30px] md:h-[45px] md:w-[45px] lg:h-[60px] lg:w-[60px] flex justify-center items-center text-white text-[18px] md:text-[25px]">
                                     4
                                 </span>
                             </div>
-                            <div class="w-[75%] lg:pr-[2rem] h-full relative">
+                            <div class="w-[75%] lg:pr-[2rem] h-full relative max-[1024px]:pt-[2rem]">
                                 <p class="text-white leading-[1.1] medium_shadow v2 text-[16px] min-[500px]:text-[19px] md:text-[20px] lg:text-[32px]">Select amount you want to buy and set slippage to 0.5-1%. Confirm and swap!: How much $DAWAE do you want? A fucking mountain? A tsunami? Set that slip Confirm like you mean it! SWAP!</p>
                             </div>
 
