--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                                 </span>
                             </div>
                             <div class="w-[75%] lg:pr-[2rem] h-full relative max-[1024px]:pt-[2rem]">
-                                <p class="text-white leading-[1.1] medium_shadow v2 text-[16px] min-[500px]:text-[19px] md:text-[20px] lg:text-[32px]">Select amount you want to buy and set slippage to 0.5-1%. Confirm and swap!: How much $DAWAE do you want? A fucking mountain? A tsunami? Set that slip Confirm like you mean it! SWAP!</p>
+                                <p class="text-white leading-[1.3] medium_shadow v2 text-[16px] min-[500px]:text-[19px] md:text-[20px] lg:text-[32px] ">Select amount you want to buy and set slippage to 0.5-1%. Confirm and swap!: How much $DAWAE do you want? A fucking mountain? A tsunami?  Confirm like you mean it! SWAP!</p>
                             </div>
 
                         </div>
