--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                 autoplay loop muted playsinline
                 data-aos="fade-right"
                 data-aos-duration="500">
-                <source src="./asset/video/Comp 1_1.mp4" type="video/mp4"> 
+                <source src="./asset/video/dawae_chart.mp4" type="video/mp4"> 
               </video>
            </div>
  
