--- a/index.html
+++ b/index.html
@@ -782,7 +782,8 @@
 
                 <!-- by -->
                  <p class="medium_shadow w-[90%] mb-[3rem] xl:w-[1150px] text-center text-white text-[25px] min-[500px]:text-[6vw] md:text-[45px]">This token is simply paying homage to a meme we all love and recognize. $DAWAE is a meme coin with no intrinsic value or expectation of financial return. The coin is completely useless and for entertainment purposes only.</p>
-                 <p class="medium_shadow w-[90%] xl:w-[1150px] text-center text-white text-[20px]  min-[500px]:text-[6vw] md:text-[40px]">© 2024 Copyright: dawaecoin</p>
+                 <p class="medium_shadow w-[90%] xl:w-[1150px] text-center text-white text-[20px]  min-[500px]:text-[6vw] md:text-[40px]">© 2024 Copyright:
+                    dawae-erc20.xyz</p>
 
              </footer>
 
