--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-
     <link rel="stylesheet" href="./cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
 
     <!-- Fonts Awesome -->
@@ -197,7 +195,7 @@
                <div class="w-full xl:w-[66%] h-auto relative  flex  items-center justify-center flex-wrap gap-[1rem] xl:gap-[2rem]">
 
                 <!-- telegram -->
-                <a href="https://web.telegram.org/" target="_blank" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
+                <a href="https://t.me/dawaeOnEth" target="_blank" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
 
                     <span class="absolute w-[97%] xl:w-[97%] h-[90%] xl:h-[92%] bg-[#F25C5C] rounded-[10px] xl:rounded-[17px]"></span>
 
@@ -208,7 +206,7 @@
                 </a>
 
                 <!-- twitter x -->
-                <a href="https://x.com/" target="_blank" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
+                <a href="https://x.com/dawaeonerc20?s=21" target="_blank" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
 
                     <span class="absolute w-[97%] xl:w-[97%] h-[90%] xl:h-[92%] bg-[#F25C5C] rounded-[10px] xl:rounded-[17px]"></span>
 
@@ -535,6 +533,7 @@
 
                 <!-- row 1 -->
                  <div class="memes_container w-full relative h-[45vw] md:h-[25vw] xl:h-[25vw]  min-[2500px]:h-[30vw] grid place-items-center overflow-hidden">
+                    
                     <div class="memes_animation h-full  flex">
                          <div class="slide w-[50vw] md:w-[25vw] h-full flex justify-center items-center">
                             <img src="./asset/img/memes/3to14q.jpg" alt="" class="w-full h-full object-cover">
@@ -564,6 +563,7 @@
                             <img src="./asset/img/memes/IMG_5627.PNG" alt="" class="w-full h-full object-cover">
                          </div>
                     </div>
+
                  </div>
                    
                  <!-- row 2 -->  
@@ -710,7 +710,7 @@
                  <div class="w-full xl:w-[66%] h-auto relative  flex  items-center justify-center flex-wrap gap-[1rem] xl:gap-[2rem]">
 
                 <!-- telegram -->
-                <a href="https://web.telegram.org/" target="_blank" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
+                <a href="https://t.me/dawaeOnEth" target="_blank" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
 
                     <span class="absolute w-[97%] xl:w-[97%] h-[90%] xl:h-[92%] bg-[#F25C5C] rounded-[10px] xl:rounded-[17px]"></span>
 
@@ -721,7 +721,7 @@
                 </a>
 
                 <!-- twitter x -->
-                <a href="https://x.com/" target="_blank" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
+                <a href="https://x.com/dawaeonerc20?s=21" target="_blank" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
 
                     <span class="absolute w-[97%] xl:w-[97%] h-[90%] xl:h-[92%] bg-[#F25C5C] rounded-[10px] xl:rounded-[17px]"></span>
 
