--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 
              <!-- contract -->
               <div class="copy_address cursor-pointer flex justify-center items-center  w-[90%] xl:w-[1200px] h-[50px] xl:h-[100px]  relative z-[2]   border-[3px] border-black ">
-                <div class="ca flex justify-center items-center h-full w-[80%] bg-white text-white max-[400px]:text-[3vw] text-[15px] md:text-[30px] xl:text-[50px] medium_shadow value" data-set="0x00000000000000000000000">
-                    <span>0x00000000000000000000000.....dEaD</span>
+                <div class="ca flex justify-center items-center h-full w-[80%] bg-white text-white max-[400px]:text-[3vw] text-[12px] md:text-[22px] xl:text-[30px] medium_shadow value" data-set="0xa05912134d97d74ace060a76028724a543aaf7f7">
+                    <span>0xa05912134d97d74ace060a76028724a543aaf7f7</span>
                 </div>
                 <div class="copy cursor-pointer flex justify-center items-center h-full w-[21%] bg-[#F25C5C]">
                     <img src="./asset/img/solar_copy-broken.svg" alt="" class="w-[30px] xl:w-[50px] h-auto object-contain">
@@ -159,8 +159,8 @@
                     <div class="text copy_address cursor-pointer   z-[1] relative w-[290px] h-[20px] min-[550px]:w-[320px] md:w-[400px] xl:w-[73vw] min-[1500px]:w-[1050px] xl:h-[70px]   flex justify-center items-center copy-contract ">
  
                         <input type="text" value=" 0x012....6e53" class="opacity-0 absolute contractInput">
-                        <p class="relative text-white medium_shadow ca_text ink-free_font text-[11px] md:text-[18px] xl:text-[42px] min-[1700px]:text-[40px] z-[1] value" data-set="0x00000000000000000000000">
-                            <span>0x00000000000000000000000.....dEaD</span>
+                        <p class="relative text-white medium_shadow ca_text ink-free_font text-[11px] md:text-[18px] xl:text-[42px] min-[1700px]:text-[40px] z-[1] value" data-set="0xa05912134d97d74ace060a76028724a543aaf7f7">
+                            <span>0xa05912134d97d74ace060a76028724a543aaf7f7</span>
                         </p> 
 
                      <div class="moving-color_container backgroundContract z-[0] h-full border-[1px] xl:border-[3px] border-black">
@@ -217,7 +217,7 @@
                 </a>
 
                 <!-- DEXTOOLS -->
-                <a href="https://www.dextools.io/app/" target="_blank" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
+                <a href="https://www.dextools.io/app/en/ether/pair-explorer/0x0ec38437b6cc357d0f68f4abdf7b0fdee8d05428" target="_blank" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
 
                     <span class="absolute w-[97%] xl:w-[97%] h-[90%] xl:h-[92%] bg-[#F25C5C] rounded-[10px] xl:rounded-[17px]"></span>
 
@@ -305,8 +305,8 @@
 
                  <!-- ca -->
                  <div class="flex copy_address cursor-pointer justify-center items-center  w-[85%] xl:w-[60%] h-[50px] xl:h-[60px]  relative z-[2]   border-[3px] border-black my-[2rem]">
-                    <div class="ca flex justify-center items-center h-full w-[85%] lg:w-[80%] bg-white text-white max-[400px]:text-[3vw] text-[14px] xl:text-[21px]  thin_shadow value" data-set="0x00000000000000000000000">
-                        <span>0x00000000000000000000000.....dEaD</span>
+                    <div class="ca flex justify-center items-center h-full w-[85%] lg:w-[80%] bg-white text-white max-[400px]:text-[3vw] text-[10px] xl:text-[19px]  thin_shadow value" data-set="0xa05912134d97d74ace060a76028724a543aaf7f7">
+                        <span>0xa05912134d97d74ace060a76028724a543aaf7f7</span>
                     </div>
                     <div class="copy cursor-pointer flex justify-center items-center h-full w-[15%] lg:w-[21%] bg-[#F25C5C]">
                         <img src="./asset/img/solar_copy-broken.svg" alt="" class="w-[18px] lg:w-[30px] h-auto object-contain">
@@ -315,7 +315,9 @@
 
                   <!-- text -->
                    <p class="medium_shadow tracking-[-3px] relative w-[80%] xl:w-[700px] z-[1]  color_changing_text1 text-[33px] md:text-[40px] xl:text-[54px] text-center">TOTAL SUPPLY <br>
-                    10.000.000</p>
+                  <!-- 420690000000 -->
+                  420.690.000.000
+                </p>
                     <p class="medium_shadow my-[1rem] tracking-[-3px] relative w-[80%] xl:w-[700px] z-[1] color_changing_text2 text-[33px] md:text-[40px] xl:text-[54px] text-center">LIQUIDITY BURNT </p>
                     <p class="medium_shadow tracking-[-3px] relative w-[80%] xl:w-[700px] z-[1] color_changing_text3 text-[33px] md:text-[40px] xl:text-[54px] text-center"> DA CLEVER TAX 0 % 
                       BUY AND SELL</p>
@@ -732,7 +734,7 @@
                 </a>
 
                 <!-- DEXTOOLS -->
-                <a href="https://www.dextools.io/app/" target="_blank" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
+                <a href="https://www.dextools.io/app/en/ether/pair-explorer/0x0ec38437b6cc357d0f68f4abdf7b0fdee8d05428" target="_blank" class="w-[45%] h-[50px]  xl:w-[400px] xl:h-[120px] flex justify-center items-center hover:scale-90 duration-200 gap-[1rem] xl:gap-[2rem] rounded-[10px] xl:rounded-[20px] bg-[#BE2727] relative">
 
                     <span class="absolute w-[97%] xl:w-[97%] h-[90%] xl:h-[92%] bg-[#F25C5C] rounded-[10px] xl:rounded-[17px]"></span>
 
